Lease Package/main/default/objects/Flat__c/fields/Flat_Number__c.field-meta.xml
<CustomField>
    <fullName>Flat_Number__c</fullName>
    <label>Flat Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>