Lease Package/main/default/objects/Flat__c/fields/Number_of_Bedroom__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Bedroom__c</fullName>
    <label>Number of Bedroom</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>