Lease Package/main/default/objects/Flat__c/fields/Staus__c.field-meta.xml
<CustomField>
    <fullName>Staus__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
                <default>true</default>
                <label>Available</label>
            </value>
            <value>
                <fullName>Occupied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>