Lease Package/main/default/objects/Flat__c/validationRules/Validate_Bathroom.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Bathroom</fullName>
    <active>true</active>
    <errorConditionFormula>Number_of_Bathroom__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Number_of_Bathroom__c</errorDisplayField>
    <errorMessage>Insert value Greater than zero</errorMessage>
</ValidationRule>