Lease Package/main/default/objects/Flat__c/validationRules/Validate_Bedroom.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Bedroom</fullName>
    <active>true</active>
    <errorConditionFormula>Number_of_Bedroom__c  &lt;= 0</errorConditionFormula>
    <errorDisplayField>Number_of_Bedroom__c</errorDisplayField>
    <errorMessage>Insert Value Greater Than zero</errorMessage>
</ValidationRule>