Lease Package/main/default/objects/Flat__c/listViews/Flats.listView-meta.xml
<ListView>
    <fullName>Flats</fullName>
    <columns>NAME</columns>
    <columns>Floor_Number__c</columns>
    <columns>Staus__c</columns>
    <columns>Utilities__c</columns>
    <filterScope>Mine</filterScope>
    <label>Flats</label>
</ListView>