Lease Package/main/default/objects/Flat__c/listViews/flatss.listView-meta.xml
<ListView>
    <fullName>flatss</fullName>
    <columns>NAME</columns>
    <columns>Flat_Number__c</columns>
    <columns>Staus__c</columns>
    <columns>Rent__c</columns>
    <columns>Utilities__c</columns>
    <columns>Building__c</columns>
    <filterScope>Mine</filterScope>
    <label>flatss</label>
</ListView>